--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+altgraph==0.17.4
 amqp==5.3.1
 asgiref==3.8.1
 attrs==25.1.0
@@ -45,24 +46,30 @@ kombu==5.5.0
 Markdown==3.7
 MarkupSafe==3.0.2
 packaging==24.2
+pefile==2023.2.7
 pillow==11.1.0
 platformdirs==4.3.6
 prompt_toolkit==3.0.50
 psycopg2==2.9.9
 psycopg2-binary==2.9.10
+pyinstaller==6.14.1
+pyinstaller-hooks-contrib==2025.5
 PyJWT==2.10.1
 PyMySQL==1.1.0
+python-barcode==0.15.1
 python-crontab==3.2.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 python-slugify==8.0.4
 pytz==2025.1
+pywin32-ctypes==0.2.3
 PyYAML==6.0.2
 redis==5.2.1
 referencing==0.36.2
 requests==2.32.3
 rpds-py==0.23.1
 s3transfer==0.10.4
+setuptools==80.9.0
 six==1.17.0
 sqlparse==0.5.3
 text-unidecode==1.3
