--- a/requirements.txt
+++ b/requirements.txt
@@ -1,83 +1,17 @@
-altgraph==0.17.4
-amqp==5.3.1
-asgiref==3.8.1
-attrs==25.1.0
-billiard==4.2.1
-boto3==1.35.23
-botocore==1.35.23
-celery==5.4.0
-certifi==2025.1.31
-charset-normalizer==3.4.1
-click==8.1.8
-click-didyoumean==0.3.1
-click-plugins==1.1.1
-click-repl==0.3.0
-cloudinary==1.42.2
-colorama==0.4.6
-coreapi==2.3.3
-coreschema==0.0.4
-cron-descriptor==1.4.5
-distlib==0.3.9
-dj-database-url==2.3.0
-dj3-cloudinary-storage==0.0.6
-Django==4.2.11
-django-admin-interface==0.28.6
-django-celery-beat==2.7.0
-django-colorfield==0.11.0
-django-cors-headers==4.7.0
-django-filter==24.3
-django-pwa==1.1.0
-django-storages==1.14.4
-django-timezone-field==7.1
-djangorestframework==3.15.2
-djangorestframework_simplejwt==5.4.0
-drf-spectacular==0.28.0
-drf-yasg==1.21.10
-filelock==3.17.0
-gunicorn==23.0.0
-idna==3.10
-inflection==0.5.1
-itypes==1.2.0
-Jinja2==3.1.5
-jmespath==1.0.1
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-kombu==5.5.0
-Markdown==3.7
-MarkupSafe==3.0.2
-packaging==24.2
-pefile==2023.2.7
-pillow==11.1.0
-platformdirs==4.3.6
-prompt_toolkit==3.0.50
-psycopg2==2.9.9
-psycopg2-binary==2.9.10
-pyinstaller==6.14.1
-pyinstaller-hooks-contrib==2025.5
-PyJWT==2.10.1
-PyMySQL==1.1.0
-python-barcode==0.15.1
-python-crontab==3.2.0
-python-dateutil==2.9.0.post0
-python-dotenv==1.1.0
-python-slugify==8.0.4
-pytz==2025.1
-pywin32-ctypes==0.2.3
-PyYAML==6.0.2
-redis==5.2.1
-referencing==0.36.2
-requests==2.32.3
-rpds-py==0.23.1
-s3transfer==0.10.4
-setuptools==80.9.0
-six==1.17.0
-sqlparse==0.5.3
-text-unidecode==1.3
-typing_extensions==4.12.2
-tzdata==2025.1
-uritemplate==4.2.0
-urllib3==2.3.0
-vine==5.1.0
-virtualenv==20.29.2
-wcwidth==0.2.13
-whitenoise==6.6.0
+Django>=4.0.0
+PyInstaller>=5.0.0
+Pillow>=9.0.0
+qrcode>=7.0.0
+opencv-python>=4.5.0
+numpy>=1.21.0
+whitenoise>=6.0.0
+django-storages>=1.14.0
+boto3>=1.26.0
+botocore>=1.29.0
+requests>=2.28.0
+urllib3>=1.26.0
+certifi>=2022.12.7
+charset-normalizer>=3.0.0
+idna>=3.4
+jmespath>=1.0.0
+python-dateutil>=2.8.0
